# dhall-to-cabal

./: .gitignore  dhall-to-cabal.cabal
cabal-to-dhall/: Main.hs
lib/: CabalToDhall.hs  DhallToCabal.hs
lib/DhallToCabal/: ConfigTree.hs  FactorType.hs
